--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #363636;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: bisque;
 }
 
 
